# moodle-monitor

./: .env  .env.example  ARCHITECTURE.md  CONTEXTO.md  DOCUMENTACAO.md  config.yaml  main.py  out.txt  output.txt  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
api/: config.py  database.py  main.py  requirements.txt  schemas.py
api/routers/: activities.py  boards.py  calendar.py  columns.py  dashboard.py  disciplines.py  history.py  sync.py  tasks.py
api/services/: board_service.py  sync_service.py  task_service.py
data/: study.db  study.db-shm  study.db-wal
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: boards.ts  calendar.ts  client.ts  columns.ts  other.ts  tasks.ts
frontend/src/mock/: data.ts  handler.ts
frontend/src/types/: index.ts
scripts/: check_b2.py  check_backend.py  check_db.py  check_missing.py  check_quadro.py  check_snapshots.py  cleanup_snapshots.py  delete_backend.py  fix_correct_dates.py  fix_due_date.py  fix_due_dates.py  fix_frontend.py  fix_snapshots.py  run_sync.py  test_course15659.py  test_f2.py  test_parser.py  test_quick.py  test_sync.py
src/auth/: moodle_auth.py  session.py
src/config/: settings.py
src/detector/: comparator.py  filter.py  hasher.py
src/monitor/: engine.py
src/notifier/: base.py  discord.py  email.py  telegram.py
src/pipeline/: pipeline.py  stages.py
src/scheduler/: scheduler.py
src/scraper/: api_client.py  extractor.py  html_parser.py  models.py
src/storage/: database.py  migrations.py  repository.py
(+33 files in other folders)
